objects/CSE_RelatedProduct__c.object
<CustomObject>
    <fields>
        <fullName>BusinessUnit__c</fullName>
        <label>Business Unit</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseOtherSymptom__c</fullName>
        <label>Other Symptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSubSymptom__c</fullName>
        <label>Sub Symptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseSymptom__c</fullName>
        <label>Symptom</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Related Products</relationshipLabel>
        <relationshipName>Case_Related_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Case Related Products</relationshipLabel>
        <relationshipName>CaseRelatedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommercialReference__c</fullName>
        <label>Commercial Reference</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommercialReference_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commercial Reference</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Case Related Products</relationshipLabel>
        <relationshipName>Case_Related_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Family_lk__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup relation to OPP_Product</description>
        <label>Family</label>
        <referenceTo>OPP_Product__c</referenceTo>
        <relationshipLabel>Case Related Products</relationshipLabel>
        <relationshipName>Case_Related_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MarkAsMasterProduct__c</fullName>
        <formula>IF(
NOT(MasterProduct__c),
HYPERLINK(&apos;/apex/VFP_HandleRedirect?isdtp=nv&amp;ID=&apos;+Id+&apos;&amp;field=MarkAsMasterProduct&apos;, &apos;[Mark as Master]&apos;,&apos;_self&apos;),&apos;[Mark as Master]&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;MarkAsMasterProduct&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MasterProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseId__c</fullName>
        <description>This field is used by Odaseva archiving solution in order to store the case id of archived cases. Required in 18-char format</description>
        <externalId>true</externalId>
        <label>OdasevaArchivedCaseId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseNumber__c</fullName>
        <label>OdasevaArchivedCaseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OdasevaArchivedCaseURL__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(OdasevaArchivedCaseId__c)),NOT(ISBLANK(OdasevaArchivedCaseNumber__c))),HYPERLINK($Label.OdasevaArchivedCaseUrlPrefix &amp; OdasevaArchivedCaseId__c, OdasevaArchivedCaseNumber__c),&quot;No archived case to display&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Odaseva Archived Case</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>ProductDescription</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>ProductFamily</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <label>ProductGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductLine__c</fullName>
        <label>ProductLine</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductSuccession__c</fullName>
        <label>ProductSuccession</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R_R__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global Return and Repair project 2017</description>
        <label>R&amp;R</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubFamily__c</fullName>
        <label>SubFamily</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_GMRCode__c</fullName>
        <label>TECH_GMRCode</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_UniqueId__c</fullName>
        <description>UniqueID with Combination of Case Id and TECH_GMRCode</description>
        <externalId>true</externalId>
        <label>TECH_UniqueId</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Case Related Product</label>
    <nameField>
        <label>Case Related Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Related Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CRP_VR_JUNCCC01_NoBlankCaseORACase</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ! $User.BypassVR__c ,ISBLANK(Case__c),OdasevaArchivedCaseURL__c !=&quot;No archived case to display&quot;)</errorConditionFormula>
        <errorMessage>Either Archive Case or Case field should be filled</errorMessage>
    </validationRules>
</CustomObject>